nivasa-macros/tests/trybuild/controller_parameter_pipes_no_route.stderr
error: controller metadata requires an HTTP method attribute
 --> tests/trybuild/controller_parameter_pipes_no_route.rs:8:8
  |
8 |     fn create(#[nivasa_macros::pipe(nivasa_pipes::TrimPipe)] body: String) {
  |        ^^^^^^
